@@ -1,3 +1,7 @@
+2014-11-13  Teresa Johnson  <tejohnson@google.com>
+	PR tree-optimization/63841
+	* g++.dg/tree-ssa/pr63841.C: New test.
+
 2014-11-13  Richard Biener  <rguenther@suse.de>
 
 	* gcc.dg/tree-ssa/forwprop-28.c: Adjust.
